--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
   font-family: var(--font);
   font-size: 100%;
   min-height: 100vh;
+  display: grid;
+  place-content: center;
 }
 
 .container {
